backend.yaml
apiVersion: apps/v1 
kind: StatefulSet 
metadata:
  name: backend-deployment 
  namespace: retail 
spec:
  replicas: 1
  minReadySeconds: 10 
  selector: 
    matchLabels:
      apps: retails 
  template: 
    metadata:
      labels:
        apps: retails 
    spec:
      containers:
        - name: 
          image:
          ports:
            - containerPort:
          resources:
            requests:
              cpu: "100m"
              memory: "218Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
