frontend.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: frontend-deployment 
  namespace: retail 
spec:
  replicas: 1
  strategy:
    type: RollingUpdate 
    rollingUpdate:
      maxUnavailable: 1 
      maxSurge: 1
  selector: 
    matchLabels:
      app : retail 
  template:
    metadata:
      labels:
        app: retail 
    spec:
      containers:
        - name: retail-cont 
          image: muralisocial123/retail-app:v1.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
