backend-service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: backend-service 
  namespace: retail 
spec:
  selector: 
    apps: retails
  ports:
  - targetPort: 3306
    port: 3306 
  type: ClusterIP
  clusterIP: none
