httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-retail 
  namespace: retail 
spec:
  parentRefs:
    - name: gateway 
  rules:
    matches: 
      path:
        type: PathPrefix
        value: /
    filters:
      type: URLRewrite 
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
      - name: frontend-service 
        port: 3000
